--- a/package.json
+++ b/package.json
@@ -16,7 +16,11 @@
     "react-dom": "^15.2.1"
   },
   "devDependencies": {
+    "babel-core": "^6.10.4",
+    "babel-loader": "^6.2.4",
+    "babel-preset-es2015": "^6.9.0",
     "babel-preset-react": "^6.11.1",
-    "chokidar-cli": "^1.2.0"
+    "chokidar-cli": "^1.2.0",
+    "webpack": "^1.13.1"
   }
 }
